cParser.java
// $ANTLR 3.5.2 c.g 2015-11-28 11:12:11

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class cParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CALL", "CALLFUNC", "COMMENT", 
		"DECLAREFUNC", "DECLAREVAR", "ELSE", "END", "EXPONENT", "FLOAT", "FORSTAT", 
		"FUNC1", "FUNC2", "FUNC3", "FUNC4", "GIVEVALUE", "ID", "IF", "IFSTAT", 
		"INT", "PROG", "STAT", "WHILESTAT", "WS", "'!='", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "'/'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", 
		"'else'", "'float'", "'for'", "'if'", "'int'", "'return'", "'void'", "'while'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int CALL=4;
	public static final int CALLFUNC=5;
	public static final int COMMENT=6;
	public static final int DECLAREFUNC=7;
	public static final int DECLAREVAR=8;
	public static final int ELSE=9;
	public static final int END=10;
	public static final int EXPONENT=11;
	public static final int FLOAT=12;
	public static final int FORSTAT=13;
	public static final int FUNC1=14;
	public static final int FUNC2=15;
	public static final int FUNC3=16;
	public static final int FUNC4=17;
	public static final int GIVEVALUE=18;
	public static final int ID=19;
	public static final int IF=20;
	public static final int IFSTAT=21;
	public static final int INT=22;
	public static final int PROG=23;
	public static final int STAT=24;
	public static final int WHILESTAT=25;
	public static final int WS=26;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public cParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public cParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return cParser.tokenNames; }
	@Override public String getGrammarFileName() { return "c.g"; }


	public static class num_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "num"
	// c.g:23:1: num : ( INT | FLOAT );
	public final cParser.num_return num() throws RecognitionException {
		cParser.num_return retval = new cParser.num_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set1=null;

		CommonTree set1_tree=null;

		try {
			// c.g:23:5: ( INT | FLOAT )
			// c.g:
			{
			root_0 = (CommonTree)adaptor.nil();


			set1=input.LT(1);
			if ( input.LA(1)==FLOAT||input.LA(1)==INT ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set1));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "num"


	public static class num_type_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "num_type"
	// c.g:27:1: num_type : ( 'int' | 'float' );
	public final cParser.num_type_return num_type() throws RecognitionException {
		cParser.num_type_return retval = new cParser.num_type_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set2=null;

		CommonTree set2_tree=null;

		try {
			// c.g:27:10: ( 'int' | 'float' )
			// c.g:
			{
			root_0 = (CommonTree)adaptor.nil();


			set2=input.LT(1);
			if ( input.LA(1)==42||input.LA(1)==45 ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set2));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "num_type"


	public static class boolexpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "boolexpr"
	// c.g:40:1: boolexpr : expr ( '==' ^| '!=' ^| '>' ^| '<' ^| '>=' ^| '<=' ^) expr ;
	public final cParser.boolexpr_return boolexpr() throws RecognitionException {
		cParser.boolexpr_return retval = new cParser.boolexpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal4=null;
		Token string_literal5=null;
		Token char_literal6=null;
		Token char_literal7=null;
		Token string_literal8=null;
		Token string_literal9=null;
		ParserRuleReturnScope expr3 =null;
		ParserRuleReturnScope expr10 =null;

		CommonTree string_literal4_tree=null;
		CommonTree string_literal5_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal7_tree=null;
		CommonTree string_literal8_tree=null;
		CommonTree string_literal9_tree=null;

		try {
			// c.g:40:10: ( expr ( '==' ^| '!=' ^| '>' ^| '<' ^| '>=' ^| '<=' ^) expr )
			// c.g:40:12: expr ( '==' ^| '!=' ^| '>' ^| '<' ^| '>=' ^| '<=' ^) expr
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_expr_in_boolexpr328);
			expr3=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expr3.getTree());

			// c.g:40:17: ( '==' ^| '!=' ^| '>' ^| '<' ^| '>=' ^| '<=' ^)
			int alt1=6;
			switch ( input.LA(1) ) {
			case 38:
				{
				alt1=1;
				}
				break;
			case 27:
				{
				alt1=2;
				}
				break;
			case 39:
				{
				alt1=3;
				}
				break;
			case 35:
				{
				alt1=4;
				}
				break;
			case 40:
				{
				alt1=5;
				}
				break;
			case 36:
				{
				alt1=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// c.g:40:18: '==' ^
					{
					string_literal4=(Token)match(input,38,FOLLOW_38_in_boolexpr331); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal4_tree = (CommonTree)adaptor.create(string_literal4);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal4_tree, root_0);
					}

					}
					break;
				case 2 :
					// c.g:40:24: '!=' ^
					{
					string_literal5=(Token)match(input,27,FOLLOW_27_in_boolexpr334); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal5_tree = (CommonTree)adaptor.create(string_literal5);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal5_tree, root_0);
					}

					}
					break;
				case 3 :
					// c.g:40:30: '>' ^
					{
					char_literal6=(Token)match(input,39,FOLLOW_39_in_boolexpr337); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal6_tree = (CommonTree)adaptor.create(char_literal6);
					root_0 = (CommonTree)adaptor.becomeRoot(char_literal6_tree, root_0);
					}

					}
					break;
				case 4 :
					// c.g:40:35: '<' ^
					{
					char_literal7=(Token)match(input,35,FOLLOW_35_in_boolexpr340); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal7_tree = (CommonTree)adaptor.create(char_literal7);
					root_0 = (CommonTree)adaptor.becomeRoot(char_literal7_tree, root_0);
					}

					}
					break;
				case 5 :
					// c.g:40:40: '>=' ^
					{
					string_literal8=(Token)match(input,40,FOLLOW_40_in_boolexpr343); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal8_tree = (CommonTree)adaptor.create(string_literal8);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal8_tree, root_0);
					}

					}
					break;
				case 6 :
					// c.g:40:46: '<=' ^
					{
					string_literal9=(Token)match(input,36,FOLLOW_36_in_boolexpr346); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal9_tree = (CommonTree)adaptor.create(string_literal9);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal9_tree, root_0);
					}

					}
					break;

			}

			pushFollow(FOLLOW_expr_in_boolexpr350);
			expr10=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, expr10.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "boolexpr"


	public static class expr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// c.g:42:1: expr : multexpr ( ( '+' ^| '-' ^) multexpr )* ;
	public final cParser.expr_return expr() throws RecognitionException {
		cParser.expr_return retval = new cParser.expr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal12=null;
		Token char_literal13=null;
		ParserRuleReturnScope multexpr11 =null;
		ParserRuleReturnScope multexpr14 =null;

		CommonTree char_literal12_tree=null;
		CommonTree char_literal13_tree=null;

		try {
			// c.g:42:6: ( multexpr ( ( '+' ^| '-' ^) multexpr )* )
			// c.g:42:8: multexpr ( ( '+' ^| '-' ^) multexpr )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_multexpr_in_expr359);
			multexpr11=multexpr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, multexpr11.getTree());

			// c.g:42:17: ( ( '+' ^| '-' ^) multexpr )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==31||LA3_0==33) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// c.g:42:18: ( '+' ^| '-' ^) multexpr
					{
					// c.g:42:18: ( '+' ^| '-' ^)
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==31) ) {
						alt2=1;
					}
					else if ( (LA2_0==33) ) {
						alt2=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// c.g:42:19: '+' ^
							{
							char_literal12=(Token)match(input,31,FOLLOW_31_in_expr363); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal12_tree, root_0);
							}

							}
							break;
						case 2 :
							// c.g:42:26: '-' ^
							{
							char_literal13=(Token)match(input,33,FOLLOW_33_in_expr368); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal13_tree, root_0);
							}

							}
							break;

					}

					pushFollow(FOLLOW_multexpr_in_expr372);
					multexpr14=multexpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, multexpr14.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class multexpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "multexpr"
	// c.g:45:1: multexpr : atom ( ( '*' ^| '/' ^) atom )* ;
	public final cParser.multexpr_return multexpr() throws RecognitionException {
		cParser.multexpr_return retval = new cParser.multexpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal16=null;
		Token char_literal17=null;
		ParserRuleReturnScope atom15 =null;
		ParserRuleReturnScope atom18 =null;

		CommonTree char_literal16_tree=null;
		CommonTree char_literal17_tree=null;

		try {
			// c.g:45:10: ( atom ( ( '*' ^| '/' ^) atom )* )
			// c.g:45:12: atom ( ( '*' ^| '/' ^) atom )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_atom_in_multexpr383);
			atom15=atom();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, atom15.getTree());

			// c.g:45:17: ( ( '*' ^| '/' ^) atom )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==30||LA5_0==34) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// c.g:45:18: ( '*' ^| '/' ^) atom
					{
					// c.g:45:18: ( '*' ^| '/' ^)
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==30) ) {
						alt4=1;
					}
					else if ( (LA4_0==34) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						throw nvae;
					}

					switch (alt4) {
						case 1 :
							// c.g:45:19: '*' ^
							{
							char_literal16=(Token)match(input,30,FOLLOW_30_in_multexpr387); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal16_tree, root_0);
							}

							}
							break;
						case 2 :
							// c.g:45:24: '/' ^
							{
							char_literal17=(Token)match(input,34,FOLLOW_34_in_multexpr390); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal17_tree = (CommonTree)adaptor.create(char_literal17);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal17_tree, root_0);
							}

							}
							break;

					}

					pushFollow(FOLLOW_atom_in_multexpr394);
					atom18=atom();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, atom18.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "multexpr"


	public static class atom_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "atom"
	// c.g:48:1: atom : ( '(' expr ')' -> ^( expr ) | num | ID | callfunc );
	public final cParser.atom_return atom() throws RecognitionException {
		cParser.atom_return retval = new cParser.atom_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal19=null;
		Token char_literal21=null;
		Token ID23=null;
		ParserRuleReturnScope expr20 =null;
		ParserRuleReturnScope num22 =null;
		ParserRuleReturnScope callfunc24 =null;

		CommonTree char_literal19_tree=null;
		CommonTree char_literal21_tree=null;
		CommonTree ID23_tree=null;
		RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// c.g:48:6: ( '(' expr ')' -> ^( expr ) | num | ID | callfunc )
			int alt6=4;
			switch ( input.LA(1) ) {
			case 28:
				{
				alt6=1;
				}
				break;
			case FLOAT:
			case INT:
				{
				alt6=2;
				}
				break;
			case ID:
				{
				int LA6_3 = input.LA(2);
				if ( (LA6_3==28) ) {
					alt6=4;
				}
				else if ( (LA6_3==END||LA6_3==27||(LA6_3 >= 29 && LA6_3 <= 36)||(LA6_3 >= 38 && LA6_3 <= 40)) ) {
					alt6=3;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// c.g:48:8: '(' expr ')'
					{
					char_literal19=(Token)match(input,28,FOLLOW_28_in_atom405); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_28.add(char_literal19);

					pushFollow(FOLLOW_expr_in_atom407);
					expr20=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr20.getTree());
					char_literal21=(Token)match(input,29,FOLLOW_29_in_atom409); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_29.add(char_literal21);

					// AST REWRITE
					// elements: expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 48:25: -> ^( expr )
					{
						// c.g:48:33: ^( expr )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_expr.nextNode(), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// c.g:49:4: num
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_num_in_atom429);
					num22=num();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, num22.getTree());

					}
					break;
				case 3 :
					// c.g:50:4: ID
					{
					root_0 = (CommonTree)adaptor.nil();


					ID23=(Token)match(input,ID,FOLLOW_ID_in_atom434); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID23_tree = (CommonTree)adaptor.create(ID23);
					adaptor.addChild(root_0, ID23_tree);
					}

					}
					break;
				case 4 :
					// c.g:51:4: callfunc
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_callfunc_in_atom439);
					callfunc24=callfunc();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, callfunc24.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "atom"


	public static class declarevar_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declarevar"
	// c.g:54:1: declarevar : ( 'int' ^ ID | 'float' ^ ID );
	public final cParser.declarevar_return declarevar() throws RecognitionException {
		cParser.declarevar_return retval = new cParser.declarevar_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal25=null;
		Token ID26=null;
		Token string_literal27=null;
		Token ID28=null;

		CommonTree string_literal25_tree=null;
		CommonTree ID26_tree=null;
		CommonTree string_literal27_tree=null;
		CommonTree ID28_tree=null;

		try {
			// c.g:54:12: ( 'int' ^ ID | 'float' ^ ID )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==45) ) {
				alt7=1;
			}
			else if ( (LA7_0==42) ) {
				alt7=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// c.g:54:14: 'int' ^ ID
					{
					root_0 = (CommonTree)adaptor.nil();


					string_literal25=(Token)match(input,45,FOLLOW_45_in_declarevar450); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal25_tree = (CommonTree)adaptor.create(string_literal25);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal25_tree, root_0);
					}

					ID26=(Token)match(input,ID,FOLLOW_ID_in_declarevar453); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID26_tree = (CommonTree)adaptor.create(ID26);
					adaptor.addChild(root_0, ID26_tree);
					}

					}
					break;
				case 2 :
					// c.g:55:4: 'float' ^ ID
					{
					root_0 = (CommonTree)adaptor.nil();


					string_literal27=(Token)match(input,42,FOLLOW_42_in_declarevar458); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal27_tree = (CommonTree)adaptor.create(string_literal27);
					root_0 = (CommonTree)adaptor.becomeRoot(string_literal27_tree, root_0);
					}

					ID28=(Token)match(input,ID,FOLLOW_ID_in_declarevar461); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID28_tree = (CommonTree)adaptor.create(ID28);
					adaptor.addChild(root_0, ID28_tree);
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declarevar"


	public static class givevalue_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "givevalue"
	// c.g:59:1: givevalue : ID '=' expr -> ^( '=' ID expr ) ;
	public final cParser.givevalue_return givevalue() throws RecognitionException {
		cParser.givevalue_return retval = new cParser.givevalue_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID29=null;
		Token char_literal30=null;
		ParserRuleReturnScope expr31 =null;

		CommonTree ID29_tree=null;
		CommonTree char_literal30_tree=null;
		RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// c.g:59:11: ( ID '=' expr -> ^( '=' ID expr ) )
			// c.g:59:13: ID '=' expr
			{
			ID29=(Token)match(input,ID,FOLLOW_ID_in_givevalue474); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID29);

			char_literal30=(Token)match(input,37,FOLLOW_37_in_givevalue477); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_37.add(char_literal30);

			pushFollow(FOLLOW_expr_in_givevalue479);
			expr31=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_expr.add(expr31.getTree());
			// AST REWRITE
			// elements: ID, 37, expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 60:2: -> ^( '=' ID expr )
			{
				// c.g:60:5: ^( '=' ID expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_37.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);
